# pyfluent-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  index.html  pyproject.toml  robots.txt  versions.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  label.yml
doc/: Makefile  make.bat
doc/changelog.d/: 1.dependencies.md  10.added.md  11.fixed.md  13.added.md  14.added.md  18.added.md  19.added.md  2.dependencies.md  23.dependencies.md  24.added.md  25.added.md  25.fixed.md  26.added.md  27.documentation.md  28.added.md  31.documentation.md  32.fixed.md  33.added.md  4.maintenance.md  5.dependencies.md  6.fixed.md  9.added.md
doc/source/: changelog.rst  conf.py  links.rst
doc/source/_templates/: layout.html
doc/source/examples/: implementing_a_tool.rst  index.rst  usage_examples.rst
doc/source/getting_started/: contribution.rst  develop_pyfluent_mcp.rst  ide_configuration.rst  index.rst  installation.rst  quick_start.rst  write_documentation.rst
doc/source/user_guide/: best_practices.rst  configuration.rst  index.rst  overview.rst  tools_and_capabilities.rst
doc/styles/: typos.toml
doc/styles/config/vocabularies/ANSYS/: accept.txt
src/ansys/fluent/mcp/: __init__.py  __main__.py  server.py
src/ansys/fluent/mcp/common/: __init__.py  activity_logging.py  backend.py  backend_trace.py  base.py  codegen.py  config.py  conversation.py  domain_tools.py  errors.py  file_handlers.py  llm_wire.py  models.py  network.py  path_descriptor.py  prompts.py  resources.py  session_logging.py  telemetry.py  text_match.py  timings.py  validation.py
src/ansys/fluent/mcp/solve/: __init__.py
src/ansys/fluent/mcp/solve/backends/: __init__.py  composite.py  introspection.py  mesh_report_parsers.py  pyfluent.py
src/ansys/fluent/mcp/solve/catalog/: __init__.py  help.py  index.py  retriever.py  schema.py
src/ansys/fluent/mcp/solve/lib/: __init__.py  active_path.py  compare_tools.py  domain_tools.py  intent_guard.py  mesh_tools.py  pattern.py  schema_probe_tools.py  units.py
tests/: conftest.py  test_active_path.py  test_active_path_resolve_write_target.py  test_activity_logging.py  test_backend_contracts.py  test_backend_trace.py  test_base_mcp.py  test_catalog_help.py  test_catalog_index_retriever.py  test_catalog_schema.py  test_common_config.py  test_common_errors.py  test_compare_tools.py  test_conversation_codegen.py  test_file_handlers.py  test_intent_guard.py  test_introspection.py  test_llm_wire.py  test_mesh_cache_lifetime.py  test_mesh_report_parsers.py  test_path_descriptor.py  test_pattern_discovery_solve_mcp.py  test_pyfluent_helpers.py  test_pyfluent_live_integration.py  test_schema_probe_tools.py  test_server_domain_mesh.py  test_session_logging.py  test_smoke.py  test_solve_mcp_integration.py  test_telemetry.py  test_text_match.py  test_timings.py  test_units.py  test_utl.py  test_validate_code_strict.py  test_validation.py
version/: index.html
version/0.1/: 404.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.1/_sources/examples/: usage_examples.rst.txt
version/0.1/_sources/getting_started/: develop_pyfluent_mcp.rst.txt  installation.rst.txt
version/0.1/_sources/user_guide/: best_practices.rst.txt
version/0.1/_static/: search.json
version/0.1/api/: index.html
version/0.1/examples/: implementing_a_tool.html  index.html  usage_examples.html
version/0.1/getting_started/: contribution.html  develop_pyfluent_mcp.html  ide_configuration.html  index.html  installation.html  quick_start.html  write_documentation.html
version/0.1/user_guide/: best_practices.html  configuration.html  index.html  overview.html  tools_and_capabilities.html
version/0.2/: index.html  py-modindex.html  search.html
version/0.2/_sources/: changelog.rst.txt  index.rst.txt
version/0.2/_sources/user_guide/: configuration.rst.txt
version/0.2/_static/: search.json
version/0.2/api/: index.html
version/0.2/examples/: usage_examples.html
version/0.2/getting_started/: contribution.html  develop_pyfluent_mcp.html
version/0.2/user_guide/: index.html  overview.html  tools_and_capabilities.html
version/dev/: 404.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
version/dev/_sources/api/: index.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/examples/: implementing_a_tool.html  index.html  usage_examples.html
version/dev/getting_started/: contribution.html  develop_pyfluent_mcp.html  ide_configuration.html  index.html  installation.html  quick_start.html  write_documentation.html
version/dev/user_guide/: best_practices.html  configuration.html  index.html  overview.html  tools_and_capabilities.html
version/stable/: 404.html  changelog.html  genindex.html  index.html  objects.inv  searchindex.js
version/stable/_sources/examples/: implementing_a_tool.rst.txt
version/stable/_sources/getting_started/: installation.rst.txt  quick_start.rst.txt
version/stable/examples/: implementing_a_tool.html  index.html
version/stable/getting_started/: ide_configuration.html  index.html  installation.html  quick_start.html  write_documentation.html
version/stable/user_guide/: best_practices.html  configuration.html
(+460 files in other folders)
